--- a/css/about.css
+++ b/css/about.css
@@ -94,14 +94,14 @@
   justify-content: center;
 }
 .box1 .infoBox ul li i::before {
-  content: "";
+  content: '';
   width: 94%;
   aspect-ratio: 1;
   display: block;
   -webkit-mask-position: center;
-          mask-position: center;
+  mask-position: center;
   -webkit-mask-repeat: no-repeat;
-          mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
   background: #fff;
 }
 .box1 .infoBox ul li .title {
@@ -119,21 +119,26 @@
     font-size: 1.125rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .box1 .infoBox ul li .title {
+    font-size: 14px;
+  }
+}
 .box1 .infoBox ul li .title .en {
   font-weight: 800;
   margin-bottom: 8px;
 }
 .box1 .infoBox ul li.technology i::before {
-  -webkit-mask-image: url("../images/index/about_icon2.svg");
-          mask-image: url("../images/index/about_icon2.svg");
+  -webkit-mask-image: url('../images/index/about_icon2.svg');
+  mask-image: url('../images/index/about_icon2.svg');
 }
 .box1 .infoBox ul li.perfection i::before {
-  -webkit-mask-image: url("../images/index/about_icon3.svg");
-          mask-image: url("../images/index/about_icon3.svg");
+  -webkit-mask-image: url('../images/index/about_icon3.svg');
+  mask-image: url('../images/index/about_icon3.svg');
 }
 .box1 .infoBox ul li.guarantee i::before {
-  -webkit-mask-image: url("../images/index/about_icon4.svg");
-          mask-image: url("../images/index/about_icon4.svg");
+  -webkit-mask-image: url('../images/index/about_icon4.svg');
+  mask-image: url('../images/index/about_icon4.svg');
 }
 
 .box2 {
@@ -200,7 +205,7 @@
   }
 }
 .box2 .picBox .bg {
-  content: "";
+  content: '';
   height: 100%;
   position: absolute;
   z-index: -1;
@@ -259,7 +264,7 @@
   position: relative;
 }
 .box2 ul li::before {
-  content: "";
+  content: '';
   width: 3px;
   height: 16px;
   background: #fdd100;
@@ -300,9 +305,9 @@
   }
 }
 .box3::before {
-  content: "";
+  content: '';
   position: absolute;
-  background: url("../images/in/about_bg.jpg") center;
+  background: url('../images/in/about_bg.jpg') center;
   background-attachment: fixed;
   display: block;
   inset: 30% 0 0;
@@ -350,7 +355,7 @@
 }
 
 .box4 {
-  background: url("../images/in/about_bg3.jpg") right center no-repeat;
+  background: url('../images/in/about_bg3.jpg') right center no-repeat;
 }
 @media screen and (max-width: 575px) {
   .box4 {
@@ -373,9 +378,9 @@
   }
 }
 .box4 .infoBox::before {
-  content: "";
+  content: '';
   position: absolute;
-  background: url("../images/in/about_bg2.png") left top no-repeat;
+  background: url('../images/in/about_bg2.png') left top no-repeat;
   width: 1329px;
   height: 768px;
   display: block;
@@ -421,7 +426,7 @@
   }
 }
 .box4 .title::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 56px;
   height: 6px;
@@ -482,7 +487,7 @@
   }
 }
 .box4 .pic .line {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -490,4 +495,4 @@
   display: block;
   left: 30px;
   top: 25px;
-}/*# sourceMappingURL=about.css.map */
+} /*# sourceMappingURL=about.css.map */
