--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,11 @@ section + section {
   }
 }
 .indexMore::after {
-  content: "";
+  content: '';
   width: 40px;
   height: 7px;
-  -webkit-mask: url("../images/icon/icon_more.svg") center no-repeat;
-          mask: url("../images/icon/icon_more.svg") center no-repeat;
+  -webkit-mask: url('../images/icon/icon_more.svg') center no-repeat;
+  mask: url('../images/icon/icon_more.svg') center no-repeat;
   background: #fdd100;
   display: block;
   margin: 0 0 0 15px;
@@ -76,15 +76,15 @@ section + section {
   }
 }
 .unitTitle::before {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   display: block;
   top: -8px;
   width: 74px;
   height: 54px;
-  -webkit-mask: url("../images/index/about_icon.svg") left bottom no-repeat;
-          mask: url("../images/index/about_icon.svg") left bottom no-repeat;
+  -webkit-mask: url('../images/index/about_icon.svg') left bottom no-repeat;
+  mask: url('../images/index/about_icon.svg') left bottom no-repeat;
   background: #fdd100;
   z-index: -1;
 }
@@ -116,13 +116,14 @@ section + section {
     height: 400px;
   }
 }
-.banner .item .pic::before, .banner .item .pic::after {
+.banner .item .pic::before,
+.banner .item .pic::after {
   display: none;
 }
 @media screen and (max-width: 1000px) {
   .banner .item .pic::before {
     width: auto;
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     inset: 0;
@@ -135,7 +136,7 @@ section + section {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .banner .item .infoBox {
   position: absolute;
@@ -186,7 +187,7 @@ section + section {
   }
 }
 .banner .item .infoBox .more::before {
-  content: "";
+  content: '';
   border-radius: 30px;
   height: 0;
   width: 0;
@@ -200,11 +201,11 @@ section + section {
   transition: all 0.3s ease;
 }
 .banner .item .infoBox .more::after {
-  content: "";
+  content: '';
   width: 40px;
   height: 7px;
-  -webkit-mask: url("../images/icon/icon_more.svg") center no-repeat;
-          mask: url("../images/icon/icon_more.svg") center no-repeat;
+  -webkit-mask: url('../images/icon/icon_more.svg') center no-repeat;
+  mask: url('../images/icon/icon_more.svg') center no-repeat;
   background: #fdd100;
   display: block;
   transition: all 0.3s ease;
@@ -245,7 +246,7 @@ section + section {
   border: none;
   background: #fff;
   -webkit-clip-path: polygon(7px 0%, 100% 0%, calc(100% - 7px) 100%, 0% 100%);
-          clip-path: polygon(7px 0%, 100% 0%, calc(100% - 7px) 100%, 0% 100%);
+  clip-path: polygon(7px 0%, 100% 0%, calc(100% - 7px) 100%, 0% 100%);
   opacity: 0.7;
 }
 @media screen and (max-width: 767px) {
@@ -269,7 +270,7 @@ section + section {
   max-width: 1630px;
 }
 .aboutBox::before {
-  content: "";
+  content: '';
   right: -1px;
   left: -1px;
   bottom: 0;
@@ -299,7 +300,7 @@ section + section {
   }
 }
 .aboutBox .topBox::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 70%;
   left: 0px;
@@ -375,6 +376,11 @@ section + section {
     font-size: 2.5rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .aboutBox .topBox .title h2 {
+    font-size: 1.5rem;
+  }
+}
 .aboutBox .topBox .title span {
   font-size: 3.125rem;
   font-weight: 800;
@@ -393,16 +399,21 @@ section + section {
     margin-bottom: 5px;
   }
 }
+@media screen and (max-width: 500px) {
+  .aboutBox .topBox .title span {
+    font-size: 1rem;
+  }
+}
 .aboutBox .topBox .title span::before {
-  content: "";
+  content: '';
   position: absolute;
   right: -15px;
   display: block;
   bottom: 26px;
   width: 74px;
   height: 54px;
-  -webkit-mask: url("../images/index/about_icon.svg") right bottom no-repeat;
-          mask: url("../images/index/about_icon.svg") right bottom no-repeat;
+  -webkit-mask: url('../images/index/about_icon.svg') right bottom no-repeat;
+  mask: url('../images/index/about_icon.svg') right bottom no-repeat;
   background: #fff;
   z-index: -1;
 }
@@ -422,6 +433,11 @@ section + section {
 @media screen and (max-width: 767px) {
   .aboutBox .topBox .title .description {
     font-size: 1.25rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .aboutBox .topBox .title .description {
+    margin: 15px 0 0;
   }
 }
 .aboutBox .infoBox {
@@ -479,12 +495,6 @@ section + section {
   flex-grow: 1;
   min-width: 33.3333333333%;
   height: 100%;
-}
-.aboutBox .infoBox ul li + li {
-  border-left: #dddddd 1px solid;
-}
-.aboutBox .infoBox ul li a {
-  height: 100%;
   padding: 20px 0;
   display: flex;
   flex-direction: column;
@@ -492,14 +502,17 @@ section + section {
   justify-content: center;
   transition: all 0.3s ease;
 }
-.aboutBox .infoBox ul li a:hover {
+.aboutBox .infoBox ul li:hover {
   background: #000;
 }
-.aboutBox .infoBox ul li a:hover .title .en {
+.aboutBox .infoBox ul li:hover .title .en {
   color: #fdd100;
 }
-.aboutBox .infoBox ul li a:hover .title .zh {
+.aboutBox .infoBox ul li:hover .title .zh {
   color: #fff;
+}
+.aboutBox .infoBox ul li + li {
+  border-left: #dddddd 1px solid;
 }
 .aboutBox .infoBox ul li i {
   max-width: 60px;
@@ -514,14 +527,14 @@ section + section {
   justify-content: center;
 }
 .aboutBox .infoBox ul li i::before {
-  content: "";
+  content: '';
   width: 94%;
   aspect-ratio: 1;
   display: block;
   -webkit-mask-position: center;
-          mask-position: center;
+  mask-position: center;
   -webkit-mask-repeat: no-repeat;
-          mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
   background: #fff;
 }
 .aboutBox .infoBox ul li .title {
@@ -539,21 +552,26 @@ section + section {
     font-size: 1.125rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .aboutBox .infoBox ul li .title {
+    font-size: 14px;
+  }
+}
 .aboutBox .infoBox ul li .title .en {
   font-weight: 800;
   margin-bottom: 8px;
 }
 .aboutBox .infoBox ul li.technology i::before {
-  -webkit-mask-image: url("../images/index/about_icon2.svg");
-          mask-image: url("../images/index/about_icon2.svg");
+  -webkit-mask-image: url('../images/index/about_icon2.svg');
+  mask-image: url('../images/index/about_icon2.svg');
 }
 .aboutBox .infoBox ul li.perfection i::before {
-  -webkit-mask-image: url("../images/index/about_icon3.svg");
-          mask-image: url("../images/index/about_icon3.svg");
+  -webkit-mask-image: url('../images/index/about_icon3.svg');
+  mask-image: url('../images/index/about_icon3.svg');
 }
 .aboutBox .infoBox ul li.guarantee i::before {
-  -webkit-mask-image: url("../images/index/about_icon4.svg");
-          mask-image: url("../images/index/about_icon4.svg");
+  -webkit-mask-image: url('../images/index/about_icon4.svg');
+  mask-image: url('../images/index/about_icon4.svg');
 }
 
 .indexSearch {
@@ -603,7 +621,7 @@ section + section {
   }
 }
 .indexSearch .searchBox .title::before {
-  content: "";
+  content: '';
   width: 3px;
   height: 16px;
   display: block;
@@ -821,9 +839,10 @@ section + section {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
-.productsBox .productList .item .pic::before, .productsBox .productList .item .pic::after {
+.productsBox .productList .item .pic::before,
+.productsBox .productList .item .pic::after {
   display: none;
 }
 .productsBox .productList .item .title {
@@ -842,10 +861,19 @@ section + section {
     font-size: 1.5rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .productsBox .productList .item .title {
+    font-size: 1.125rem;
+  }
+}
 .productsBox .productList .item p {
   color: #444444;
   line-height: 1.8;
   letter-spacing: 1px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 .productsBox .slick-arrow {
   position: absolute;
@@ -856,10 +884,10 @@ section + section {
   transform: translateY(-50%);
 }
 .productsBox .slick-arrow::before {
-  content: "";
+  content: '';
   display: block;
-  -webkit-mask: url("../images/icon/icon_arrow.svg") center no-repeat;
-          mask: url("../images/icon/icon_arrow.svg") center no-repeat;
+  -webkit-mask: url('../images/icon/icon_arrow.svg') center no-repeat;
+  mask: url('../images/icon/icon_arrow.svg') center no-repeat;
   width: 19px;
   height: 41px;
   background: #cccccc;
@@ -894,6 +922,11 @@ section + section {
   width: 75%;
   max-width: 1110px;
 }
+@media screen and (max-width: 1200px) {
+  .applicationBox .picSwiper {
+    width: calc(100% - 240px);
+  }
+}
 @media screen and (max-width: 767px) {
   .applicationBox .picSwiper {
     width: 100%;
@@ -915,7 +948,7 @@ section + section {
   }
 }
 .applicationBox .picSwiper .item::before {
-  content: "";
+  content: '';
   position: absolute;
   inset: 75px 70px 140px 0px;
   z-index: 1;
@@ -967,15 +1000,15 @@ section + section {
   height: 120px;
   display: block;
   -webkit-mask-position: center;
-          mask-position: center;
+  mask-position: center;
   -webkit-mask-repeat: no-repeat;
-          mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
 }
 .applicationBox .picSwiper .item .infoBox i img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 .applicationBox .picSwiper .item .textBox {
   width: 65%;
@@ -1012,6 +1045,11 @@ section + section {
   display: flex;
   flex-direction: column;
   padding: 2.5% 0 10px;
+}
+@media screen and (max-width: 1200px) {
+  .applicationBox .infoSwiper {
+    width: 240px;
+  }
 }
 @media screen and (max-width: 767px) {
   .applicationBox .infoSwiper {
@@ -1051,7 +1089,7 @@ section + section {
   transition-property: transform, opacity;
 }
 .applicationBox .infoSwiper .swiper-slide .item::after {
-  content: "";
+  content: '';
   position: absolute;
   height: 1px;
   left: 10px;
@@ -1072,7 +1110,8 @@ section + section {
     margin: 0 auto 5px;
   }
 }
-.applicationBox .infoSwiper .swiper-slide .item i .pic::before, .applicationBox .infoSwiper .swiper-slide .item i .pic::after {
+.applicationBox .infoSwiper .swiper-slide .item i .pic::before,
+.applicationBox .infoSwiper .swiper-slide .item i .pic::after {
   display: none;
 }
 .applicationBox .infoSwiper .swiper-slide .item .title {
@@ -1095,17 +1134,19 @@ section + section {
   opacity: 0;
   transform: rotateY(-180deg);
 }
-.applicationBox .infoSwiper .swiper-slide .back::after, .applicationBox .infoSwiper .swiper-slide .back::before {
+.applicationBox .infoSwiper .swiper-slide .back::after,
+.applicationBox .infoSwiper .swiper-slide .back::before {
   display: none !important;
 }
 .applicationBox .infoSwiper .swiper-slide .back i::before {
   background: #fff;
 }
-.applicationBox .infoSwiper .swiper-slide:nth-last-child(1) .item::after, .applicationBox .infoSwiper .swiper-slide:nth-last-child(2) .item::after {
+.applicationBox .infoSwiper .swiper-slide:nth-last-child(1) .item::after,
+.applicationBox .infoSwiper .swiper-slide:nth-last-child(2) .item::after {
   display: none;
 }
 .applicationBox .infoSwiper .swiper-slide:nth-child(odd) .item::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 1px;
   right: 0px;
@@ -1119,7 +1160,7 @@ section + section {
     display: none;
   }
   .applicationBox .infoSwiper .swiper-slide .item::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 1px;
     right: 0px;
@@ -1145,7 +1186,7 @@ section + section {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 @media screen and (min-width: 767px) {
   .applicationBox .swiper {
@@ -1191,7 +1232,7 @@ section + section {
   position: relative;
 }
 .newsBox::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   left: 0px;
@@ -1244,7 +1285,7 @@ section + section {
   }
 }
 .newsBox .picN::before {
-  content: "";
+  content: '';
   position: absolute;
   border: 2px solid #fdd100;
   z-index: 2;
@@ -1260,7 +1301,7 @@ section + section {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .newsBox .infoBox {
   width: 50%;
@@ -1328,4 +1369,4 @@ section + section {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
